tests/errors/unresolved_type.vir
mod Top {
    // CHECK: Unresolved type Foo
    incoming foo : Foo async

    outgoing out : Word[8] async

    out := foo->bar
}
